# reapermap

./: .gitignore  CLAUDE.md  GROK-REVIEW-Comparison.md  INSTRUCTIONS.md  LICENSE  MAP.md  NOTICE  README.md  REVIEW-IMPLEMENTATION-SUMMARY.md  SECURITY.md  plan-privateRepoMapRebuild.prompt.md  plan-projectDocumentationMap.prompt.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
context/: COMPARISON-reapermap-vs-RepoMapper-2026-06-grok-notes.md  COMPARISON-reapermap-vs-RepoMapper-2026-06-update.md  COMPARISON-reapermap-vs-RepoMapper.md  plan-fixing-COMPARISION-issues-gaps.md  plan-privateRepoMapRebuild.prompt.md
mockrepotest/: .env  .env.example  .env.production  .gitignore  .netrc  .npmrc  .pypirc  README.md  credentials.json  id_rsa  server.pem
mockrepotest/.aws/: credentials
mockrepotest/.claude/worktrees/session/src/: secret.py
mockrepotest/.ssh/: config
mockrepotest/DerivedData/: derived_secret.py
mockrepotest/docs/: pii.md
mockrepotest/ignored_secrets/: pii_dump.md
mockrepotest/nested/ignored/: secret.py
mockrepotest/secrets/: app.key
mockrepotest/src/: app.py  config.py  worker.js
queries/tree-sitter-language-pack/: swift-tags.scm
src/privrepomap/: __init__.py  cli.py  filescan.py  importance.py  redact.py  repomap.py  scm.py  server.py  tokenizer.py
tests/: conftest.py  test_filescan.py  test_mockrepotest_security.py  test_offline.py  test_pagerank.py  test_redact.py  test_repomap.py  test_scope_options.py  test_search_relevance.py  test_swift_refs.py  test_tokenizer.py
