[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "privrepomap"
version = "0.1.0"
description = "Private, offline, structural repository mapper (tree-sitter + PageRank). No network, no telemetry."
requires-python = ">=3.11"
dependencies = [
    "diskcache>=5.6.0",
    "fastmcp>=2.11.3",
    "grep-ast>=0.3.0",
    "networkx>=3.0",
    "pathspec>=0.12.0",
    "pygments>=2.14.0",
    "tree-sitter>=0.20.0",
    "tree-sitter-language-pack>=0.4.0",
]
# NOTE: tiktoken is intentionally excluded. Token counting is done offline.

[project.optional-dependencies]
test = ["pytest>=7.0"]
lint = ["ruff>=0.8.0"]
dev = ["pytest>=7.0", "ruff>=0.8.0"]

[project.scripts]
privrepomap = "privrepomap.cli:main"
privrepomap-mcp = "privrepomap.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
privrepomap = ["../../queries/**/*.scm"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]
extend-exclude = [".repomap.tags.cache.v*"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
